@@ -25,15 +25,14 @@
 # 02110-1301 USA.
 #
 # $Log$
+# Revision 1.4  2008-05-29 18:34:00  tino
+# make test improved, can now execute a pipe, too
+#
 # Revision 1.3  2008-05-28 14:32:52  tino
 # Output fixed
 #
 # Revision 1.2  2008-05-27 21:43:39  tino
 # Better diagnostics
-#
-# Revision 1.1  2008-05-21 17:58:13  tino
-# make test
-#
 
 set -e
 
@@ -111,7 +110,7 @@ start
 last="$*"
 [ -d "$TMPDIR" ]
 set +e
-out="`{ PATH="..:$PATH"; cd "$TMPDIR" && "$@"; } 2>&1`"
+out="`{ PATH="..:$PATH"; cd "$TMPDIR" && eval "$@"; } 2>&1`"
 res="$?"
 set -e
 }
